Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28287

Code model cannot recognize QtObject

    XMLWordPrintable

Details

    • 5935536b7 (master), 90b8e482c (qds/dev)

    Description

      • The code builds and runs fine
      • Tools > QML/JS > Reset Code Model fixes the problem temporarily
      • Re-running qmake/CMake (or restarting Qt Creator) breaks it again

       

      Demo below, by adding QtObject {} to the Qt Quick Demo - Clocks (https://doc.qt.io/qt-6/qtdoc-demos-clocks-example.html) in Qt Creator 9.0.0-b2

      Attachments

        1. QtObject-not-recognized.png
          QtObject-not-recognized.png
          6 kB
        2. QtObject-not-resolved.png
          QtObject-not-resolved.png
          18 kB
        3. qtc-qml-codemodel-QtObject.gif
          qtc-qml-codemodel-QtObject.gif
          686 kB
        4. QtObjectTest.zip
          2 kB
        5. output.mp4
          14.22 MB

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-28287
          # Subject Branch Project Status CR V

          Activity

            People

              sami.shalayel Sami Shalayel
              skoh-qt Sze Howe Koh
              Votes:
              2 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes